<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/setting_detail"
              style="?android:attr/textAppearanceLarge"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:textSize="30dp"
              android:text="@string/settings_dev"
              tools:context="com.dalton.puzzleadventure.android.SettingDetailFragment"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_dev_desc"
        android:paddingBottom="16dp"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_dev_box2d_debug_graphics"
        android:id="@+id/box2d_debug_graphics"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_dev_debug_overlay"
        android:id="@+id/debug_overlay"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>
</LinearLayout>