<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/setting_detail"
              style="?android:attr/textAppearanceLarge"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:textSize="30dp"
              android:text="@string/settings_game"
              tools:context="com.dalton.puzzleadventure.android.SettingDetailFragment"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_game_desc"
        android:paddingBottom="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_game_reset_data"
        android:id="@+id/game_reset_data_button"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:background="#FF5555"
        android:onClick="resetData">

    </Button>
</LinearLayout>