<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/menu_background"
                tools:context="com.dalton.puzzleadventure.android.MainActivity">


    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:id="@+id/button"
        android:onClick="startGame"
        android:textSize="30sp"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"
        android:id="@+id/button2"
        android:onClick="openSettings"
        android:textSize="30sp"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/credits_button"
        android:id="@+id/button3"
        android:onClick="openCredits"
        android:textSize="30sp"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/info_button"
        android:id="@+id/button4"
        android:onClick="openInfo"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="144dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/imageView"
        android:src="@drawable/title_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:scaleType="fitCenter"/>
</RelativeLayout>
